# tunnel-client

./: AGENTS.md  BUILD.bazel  Dockerfile  Makefile  OWNERS  README.md  client_test.go  go.mod  go.sum  plan.md  pyproject.toml
adminui/: BUILD.bazel  README.md
adminui/src/components/: CodexPanel.svelte  HarpoonPanel.svelte
adminui/src/components/__tests__/: App.test.ts  HarpoonPanel.test.ts
adminui/src/lib/: types.ts
cmd/client/: BUILD.bazel  admin_profiles_command.go  cloudflared_command.go  cloudflared_command_test.go  codex_assistant_command.go  codex_assistant_kb.go  codex_command.go  codex_command_test.go  dev_command.go  doctor_command.go  doctor_command_test.go  health_command.go  health_command_test.go  help_topics_test.go  init_command.go  main_test.go  plugin_command.go  profile_samples.go  profiles_command.go  profiles_command_test.go  root_command.go  root_command_test.go  run_command.go  run_command_test.go  runtimes_command.go  runtimes_command_test.go  ux_command_test.go
cmd/client/admin/: BUILD.bazel  admin_command.go  tunnels_command.go  tunnels_command_test.go
cmd/client/help_topics/: doctor.txt  plugin.txt  quickstart.txt  samples.txt  troubleshooting.txt
cmd/client/profile_samples/: sample_mcp_enterprise_proxy.yaml.tmpl
docs/: BUILD.bazel  README.md  architecture.md  assistantkb_test.go  configuration.md  deployment.md  development.md  end-user-guide.md  enterprise-customer-onboarding.md  onboarding.md  openapi.json  permissions.md  protocol.md  roadmap.md  troubleshooting.md
docs/deployment/: cloudflared.md  docker.md  overview.md
docs/pdf/: end_user_guide_page_blocks.py
e2e/: BUILD.bazel  ca_bundle_e2e_test.go  harpoon_channel_tools_list_e2e_test.go  harpoon_inmemory_tool_e2e_test.go  max_inflight_e2e_test.go  notification_forwarding_e2e_test.go  oauth_discovery_e2e_test.go  oauth_protection_e2e_test.go  proxy_e2e_test.go  redundant_pollers_e2e_test.go  session_termination_e2e_test.go  simple_tool_e2e_call_test.go  static_headers_e2e_test.go  stdio_tool_e2e_call_test.go
e2e/testdata/: ca_bundle.pem  server_cert.pem  server_key.pem
pkg/adminui/: BUILD.bazel  channel_status.go  codex.go  codex_test.go  fxmodule.go  fxmodule_test.go  harpoon.go  harpoon_integration_test.go  harpoon_test.go  log_buffer.go  log_buffer_test.go  log_export.go  log_export_test.go  log_level.go  log_level_test.go  oauth.go  oauth_test.go  startup.go  startup_test.go  status_test.go  system.go  system_test.go  ui.go
pkg/adminui/assets/: app.js  index.html  styles.css
pkg/app/: BUILD.bazel  app.go
pkg/codexappserver/: BUILD.bazel
pkg/codexplugin/: BUILD.bazel  codexplugin.go  manager.go  manager_test.go
pkg/codexplugin/session/: BUILD.bazel  session.go  session_test.go
pkg/codexplugin/state/: BUILD.bazel
pkg/config/: BUILD.bazel  admin.go  admin_test.go  config.go  config_test.go  file_config.go  profile.go  proxy.go  watcher.go
pkg/controlplane/: BUILD.bazel  doc.go  polled_command.go  responder.go
pkg/controlplane/admin/: BUILD.bazel  client_test.go  tunnel_client.go  types.go
pkg/controlplane/fx/: BUILD.bazel  fxmodule.go  fxmodule_test.go
pkg/controlplane/internal/: BUILD.bazel  command_parser.go  command_parser_test.go  command_types.go  metrics_test.go  poller.go  poller_test.go  roundtripper.go  roundtripper_test.go  tunnel_service_client.go  tunnel_service_client_test.go
pkg/controlplane/wiretypes/: BUILD.bazel  wire_test.go
pkg/dispatcher/: BUILD.bazel  fxmodule.go  fxmodule_test.go
pkg/dispatcher/internal/: BUILD.bazel  metrics.go  metrics_test.go  oauth_discovery_test.go  processor.go  processor_test.go  queue_listener.go  queue_listener_test.go
pkg/harpoon/: BUILD.bazel  fxmodule.go  fxmodule_test.go  host_registration.go  host_registration_test.go  integration_test.go  metadata.go  metrics.go  metrics_test.go  registry.go  registry_test.go  server.go  server_test.go
pkg/harpoon/hostbus/: BUILD.bazel  hostbus.go
pkg/harpoon/internal/hostclassifier/: BUILD.bazel  classifier.go  classifier_test.go
pkg/health/: BUILD.bazel  health.go  health_test.go
pkg/httpguard/: BUILD.bazel  guard.go  guard_test.go
pkg/log/: BUILD.bazel  fxmodule.go  fxmodule_test.go  level_controller.go  logger.go  logger_test.go  roundtripper.go  roundtripper_test.go  tee_handler.go
pkg/mcpclient/: BUILD.bazel  channel_transport_factory.go  channel_transport_factory_test.go  forwarding_transport_impl.go  forwarding_transport_impl_test.go  fxmodule.go  fxmodule_test.go  probe_state.go  probe_state_test.go  serialized_forwarding_transport_test.go  stdio_command.go  stdio_command_factory.go  stdio_command_test.go  transport_provider.go  transport_provider_fx.go
pkg/mcpclient/internal/: BUILD.bazel  static_headers.go  static_headers_test.go
pkg/metrics/: BUILD.bazel
pkg/oauth/: BUILD.bazel  discovery.go  discovery_retry_policy.go  discovery_test.go  hostbundle.go  hostbundle_test.go  module.go  module_test.go  resource_meta.go  resource_meta_test.go  state.go
pkg/process/: BUILD.bazel  process.go  process_test.go
pkg/proxy/: BUILD.bazel  logging.go  route.go  route_test.go
pkg/proxyhealth/: BUILD.bazel  checker.go  checker_test.go  metrics.go
pkg/tlsconfig/: BUILD.bazel  bundle.go  trust.go  trust_test.go
pkg/transport/: BUILD.bazel  default.go  default_test.go  dynamic.go
pkg/tunnelctx/: BUILD.bazel  ctx.go  ctx_test.go
pkg/types/: BUILD.bazel  channel.go  channel_test.go  tunnel_response.go  tunnel_response_test.go
pkg/utils/: BUILD.bazel  stable_uuid.go
plugins/: BUILD.bazel  assistantkb.go  bundle.go  bundle_test.go
plugins/tunnel-mcp/: AGENTS.md  README.md
plugins/tunnel-mcp/.codex-plugin/: plugin.json
plugins/tunnel-mcp/mcp/: server.cjs  server.test.cjs  server_test.cjs
plugins/tunnel-mcp/scripts/: tunnel_mcp
plugins/tunnel-mcp/tests/: test_tunnel_mcp.py
scripts/: BUILD.bazel  build_admin_ui.sh  build_cloudflared.sh  build_distribution_package.sh  generate_homebrew_formula.sh  generate_homebrew_formula_test.sh  publish_homebrew_formula.sh  publish_homebrew_formula_test.sh  release_tag.sh
(+38 files in other folders)
