load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "health",
    srcs = ["health.go"],
    importpath = "go.openai.org/api/tunnel-client/pkg/health",
    visibility = ["//visibility:public"],
    deps = [
        "//api/tunnel-client/pkg/config",
        "//api/tunnel-client/pkg/log",
        "//api/tunnel-client/pkg/mcpclient",
        "//api/tunnel-client/pkg/metrics",
        "//api/tunnel-client/pkg/oauth",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "health_test",
    srcs = ["health_test.go"],
    embed = [":health"],
    deps = [
        "//api/tunnel-client/pkg/mcpclient",
        "//api/tunnel-client/pkg/oauth",
        "@com_github_stretchr_testify//require",
    ],
)
