load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = [
        "fxmodule.go",
        "level_controller.go",
        "logger.go",
        "roundtripper.go",
        "tee_handler.go",
    ],
    importpath = "go.openai.org/api/tunnel-client/pkg/log",
    visibility = ["//visibility:public"],
    deps = [
        "//api/tunnel-client/pkg/config",
        "//api/tunnel-client/pkg/tunnelctx",
        "@com_github_modelcontextprotocol_go_sdk//jsonrpc",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "log_test",
    srcs = [
        "fxmodule_test.go",
        "logger_test.go",
        "roundtripper_test.go",
    ],
    embed = [":log"],
    deps = [
        "//api/tunnel-client/pkg/config",
        "//api/tunnel-client/pkg/tunnelctx",
        "//api/tunnel-client/pkg/types",
        "@com_github_modelcontextprotocol_go_sdk//jsonrpc",
        "@com_github_stretchr_testify//require",
    ],
)
