load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mcpclient",
    srcs = [
        "channel_transport_factory.go",
        "forwarding_transport.go",
        "forwarding_transport_impl.go",
        "fxmodule.go",
        "headers.go",
        "probe_state.go",
        "serialized_forwarding_transport.go",
        "shared_connection_transport.go",
        "stdio_command.go",
        "stdio_command_factory.go",
        "transport_provider.go",
        "transport_provider_fx.go",
    ],
    importpath = "go.openai.org/api/tunnel-client/pkg/mcpclient",
    visibility = ["//visibility:public"],
    deps = [
        "//api/tunnel-client/pkg/config",
        "//api/tunnel-client/pkg/log",
        "//api/tunnel-client/pkg/mcpclient/internal",
        "//api/tunnel-client/pkg/metrics",
        "//api/tunnel-client/pkg/proxy",
        "//api/tunnel-client/pkg/tlsconfig",
        "//api/tunnel-client/pkg/transport",
        "//api/tunnel-client/pkg/types",
        "//api/tunnel-client/pkg/version",
        "@com_github_modelcontextprotocol_go_sdk//jsonrpc",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@org_golang_x_sync//singleflight",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "mcpclient_test",
    srcs = [
        "channel_transport_factory_test.go",
        "forwarding_transport_impl_test.go",
        "forwarding_transport_test.go",
        "fxmodule_test.go",
        "headers_test.go",
        "probe_state_test.go",
        "serialized_forwarding_transport_test.go",
        "shared_connection_transport_test.go",
        "stdio_command_test.go",
    ],
    embed = [":mcpclient"],
    deps = [
        "//api/tunnel-client/pkg/config",
        "//api/tunnel-client/pkg/log",
        "//api/tunnel-client/pkg/mcpclient/internal",
        "//api/tunnel-client/pkg/tlsconfig",
        "//api/tunnel-client/pkg/types",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_modelcontextprotocol_go_sdk//jsonrpc",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@org_uber_go_fx//:fx",
    ],
)
