load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "metrics",
    srcs = [
        "fxmodule.go",
        "http_attributes.go",
    ],
    importpath = "go.openai.org/api/tunnel-client/pkg/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_exporters_prometheus//:prometheus",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "metrics_test",
    srcs = ["http_attributes_test.go"],
    embed = [":metrics"],
    deps = ["@com_github_stretchr_testify//require"],
)
