load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "process",
    srcs = ["process.go"],
    importpath = "go.openai.org/api/tunnel-client/pkg/process",
    visibility = ["//visibility:public"],
    deps = [
        "//api/tunnel-client/pkg/config",
        "//api/tunnel-client/pkg/log",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "process_test",
    srcs = ["process_test.go"],
    embed = [":process"],
    deps = [
        "//api/tunnel-client/pkg/config",
        "//api/tunnel-client/pkg/log",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_fx//fxtest",
    ],
)
